trying to get the number of actors

--- a/src/AdminPortal/Views/Home/Index.cshtml
+++ b/src/AdminPortal/Views/Home/Index.cshtml
@@ -26,6 +26,11 @@
                 </div>
             </div>
         </div>
+
+        actors: <span ng-bind="actors"></span>
+        @*<div class="row" ng-bind="actor in actors">
+            {{actor}}
+        </div>*@
     </div>
 </div>
 
