--- a/src/AdminPortal/Views/Home/Index.cshtml
+++ b/src/AdminPortal/Views/Home/Index.cshtml
@@ -27,10 +27,8 @@
             </div>
         </div>
 
-        actors: <span ng-bind="actors"></span>
-        @*<div class="row" ng-bind="actor in actors">
-            {{actor}}
-        </div>*@
+        actors: <span ng-bind="actors"></span><br/>
+        partitions: <span ng-bind="partitions"></span><br />
     </div>
 </div>
 
