--- a/src/AdminPortal/Views/Home/Index.cshtml
+++ b/src/AdminPortal/Views/Home/Index.cshtml
@@ -24,6 +24,9 @@
                         Sending data from devices
                     </label>
                 </div>
+                <div>
+                    Temperature <input type="number" ng-model="temptoSend" />
+                </div>
             </div>
         </div>
 
